--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="img">
-        <img src="./img/hh-unscreen.gif" alt="">
+        <img src="./img/hh.gif" alt="">
     </div>
 </body>
 </html>
